Item1772: reduce css file size by only defining styles that are actually used
git-svn-id: http://svn.foswiki.org/trunk@4471 0b4bb1d4-4e5a-0410-9cc4-b2b747904278

--- a/core/lib/Foswiki/Configure/resources/styles.css
+++ b/core/lib/Foswiki/Configure/resources/styles.css
@@ -127,7 +127,9 @@ ul.configureRootTab li a {
 	border-left:1px solid #d4e7f1;
 	border-bottom:1px solid #d4e7f1;
 }
-
+#configureSections {
+	margin:1em 0 0 0;
+}
 #configureSections li a.configureWarn {
 	background-image:url(configure?action=resource;resource=icon_warn_white.gif);
 	background-position:95% 50%;
@@ -155,6 +157,7 @@ ul.configureSubTab {
 	list-style-type:none;
 	height:1%;
 	padding:0;
+	margin:1em 0 3em 0;
 }
 ul.configureSubTab li {
 	display:block;
@@ -247,14 +250,6 @@ table.configureExtensionsTable .configureInstalled a:visited {
 	background:#ffffd6;
 }
 
-h1.firstHeader,
-h2.firstHeader,
-h3.firstHeader,
-h4.firstHeader,
-h5.firstHeader,
-h6.firstHeader {
-	margin-top:0;
-}
 strong {
 	color:#D1400E;
 }
