Item1838: more robust version comparison using the RELEASE instead of the version. Depends on extension authors observing the standards for release naming. Rearranged Find More Extensions UI to improve presentation in the new Configure
git-svn-id: http://svn.foswiki.org/trunk@4531 0b4bb1d4-4e5a-0410-9cc4-b2b747904278

--- a/core/lib/Foswiki/Configure/resources/styles.css
+++ b/core/lib/Foswiki/Configure/resources/styles.css
@@ -212,6 +212,10 @@ a.configureError {
 	margin:.5em 0;
 }
 
+.configureDefaultValueLink {
+	font-size:86%;
+}
+
 /* --- EXTENSIONS --- */
 table.configureExtensionsTable {
 	margin:1em 0;
@@ -220,12 +224,6 @@ table.configureExtensionsTable th {
 	background:#e5f4f8;
 	color:#fff;
 	border:none;
-}
-table.configureExtensionsTable th,
-table.configureExtensionsTable td {
-	padding:.5em;
-}
-table.configureExtensionsTable .even {
 }
 table.configureExtensionsTable .configureReinstall {
 	background:#e8f9e8;
@@ -236,18 +234,27 @@ table.configureExtensionsTable .configureUpgrade {
 table.configureExtensionsTable .configurePseudoinstalled {
 	background:#f2f2f2;
 }
+/*
 table.configureExtensionsTable .configureInstalled a:link,
 table.configureExtensionsTable .configureInstalled a:visited {
 	font-weight:bold;
-}
-
-.configureDefaultValueLink {
-	font-size:86%;
-}
+}*/
 
 /* Used when a non-foswiki extension is found */
-.configureAlienExtension {
+table.configureExtensionsTable .configureAlienExtension {
 	background:#ffffd6;
+}
+
+table.configureExtensionsTable td.configureExtensionTitle { 
+  border: 0;
+  margin: 0;
+  padding: 2em 1em 1em 1em;
+}
+
+table.configureExtensionsTable td.configureExtensionData {
+  margin: 0;
+  padding: 1em 1em 2em 1em;
+  border: 0;
 }
 
 strong {
