--- a/PatternSkin/templates/attachtables.pattern.tmpl
+++ b/PatternSkin/templates/attachtables.pattern.tmpl
@@ -4,7 +4,7 @@
 
 %TMPL:DEF{"commonattachtableattributes"}%valign="middle" dataalign="center,left,left,right,left,left,left,center" datavalign="top" headercolor="#0066cc" databg="#ffffff" headerbg="#ffffff" headerbgsorted="#eeeeee" databgsorted="#f5f5f5" tablerules="rows" %TMPL:END%
 
-%TMPL:DEF{"topicattachmentwisty"}%%TWISTY{id="topicattachmentslist" mode="div" remember="on" showlink="<h3 class='patternAtachmentHeader'>&#9658; %MAKETEXT{"Attachments"}%</h3>" hidelink="<h3 class='patternAtachmentHeader'>&#9660; %MAKETEXT{"Attachments"}%</h3>" linkclass="foswikiButton patternTwistyButton"}%%TMPL:END%
+%TMPL:DEF{"topicattachmentwisty"}%%TWISTY{mode="div" remember="on" showlink="<h3 class='patternAttachmentHeader'>&#9658; %MAKETEXT{"Attachments"}%</h3>" hidelink="<h3 class='patternAttachmentHeader'>&#9660; %MAKETEXT{"Attachments"}%</h3>" linkclass="foswikiButton patternTwistyButton"}%%TMPL:END%
 
 %{ Header definition for topic attachments and top table in attach screen }%
 %TMPL:DEF{ATTACH:files:header(basic)}%<div class="foswikiAttachments">
@@ -12,7 +12,7 @@
 %TMPL:P{ATTACH:files:header(toprow)}%%TMPL:END%
 
 %{ Format definition for topic attachment table }%
-%TMPL:DEF{ATTACH:files:tableformat}%%TABLE{%TMPL:P{"commonattachtableattributes"}%id="foswikiAttachmentsTable" summary="%MAKETEXT{"Topic attachments"}%" caption="%MAKETEXT{"Topic attachments"}%"}%%TMPL:END%
+%TMPL:DEF{ATTACH:files:tableformat}%%TABLE{%TMPL:P{"commonattachtableattributes"}%summary="%MAKETEXT{"Topic attachments"}%" caption="%MAKETEXT{"Topic attachments"}%"}%%TMPL:END%
 
 %{ Header for topic attachment table }%
 %TMPL:DEF{ATTACH:files:header}%<div class="foswikiAttachments">
