Item1875: remove widgets include, and replace with simplicity
git-svn-id: http://svn.foswiki.org/trunk@4593 0b4bb1d4-4e5a-0410-9cc4-b2b747904278

--- a/FamFamFamContrib/templates/view.famfamfam.tmpl
+++ b/FamFamFamContrib/templates/view.famfamfam.tmpl
@@ -31,11 +31,13 @@
 	</a></span>%TMPL:END%
 
 %TMPL:DEF{"top:toolbarbutton_more"}%<span>
-	<a href="%SCRIPTURL{"oops"}%/%WEB%/%TOPIC%?template=more" title="More actions">
+	<a href="%SCRIPTURL{"oops"}%/%WEB%/%TOPIC%?template=oopsmore" title="More actions">
 		<img alt="more" src="%PUBURL%/%SYSTEMWEB%/FamFamFamSilkIcons/wrench.png" width="16" height="16" />
 	</a></span>%TMPL:END%
 
-%TMPL:DEF{"top:toolbarbuttons_notauthenticated"}% %INCLUDE{"%TMPL:P{widgetstext}%" section="widget-login" warn="off"}% %TMPL:END%
+%TMPL:DEF{"top:toolbarbuttons_notauthenticated"}% %LOGIN% %TMPL:END%
+
+%{ TODO: add a conditional SubScribePlugin icon }%
 
 %TMPL:DEF{"top:toolbarbuttons_authenticated"}%		%TMPL:P{
 			"top:toolbarbutton_edit"
