Item1887: refactoring to make 'more' a view template instead of oops resulted in incorrect parameter expansion, possibly due to reversion of changes
git-svn-id: http://svn.foswiki.org/trunk@4620 0b4bb1d4-4e5a-0410-9cc4-b2b747904278

--- a/core/templates/viewtopicactionbuttons.tmpl
+++ b/core/templates/viewtopicactionbuttons.tmpl
@@ -14,7 +14,7 @@
 %TMPL:DEF{"attach_link"}%<span class="foswikiRequiresChangePermission"><a href='%SCRIPTURLPATH{"attach"}%/%WEB%/%TOPIC%' rel='nofollow' %MAKETEXT{"title='Attach an image or document to this topic' accesskey='a'>&Attach"}%</a></span>%TMPL:END%
 
 
-%TMPL:DEF{"more_link"}%<span><a href='%SCRIPTURLPATH{"view"}%/%WEB%/%TOPIC%?template=more&param1=%MAXREV%&param2=%CURRREV%' rel='nofollow' %MAKETEXT{"title='Delete or rename this topic; set parent topic; view and compare revisions' accesskey='m'>&More topic actions"}%</a></span>%TMPL:END%
+%TMPL:DEF{"more_link"}%<span><a href='%SCRIPTURLPATH{"view"}%/%WEB%/%TOPIC%?template=more&maxrev=%MAXREV%&currrev=%CURRREV%' rel='nofollow' %MAKETEXT{"title='Delete or rename this topic; set parent topic; view and compare revisions' accesskey='m'>&More topic actions"}%</a></span>%TMPL:END%
 
 %TMPL:DEF{"action_printable"}%%TMPL:P{"printable"}%%TMPL:P{"sep"}%%TMPL:END%
 
