--- a/PatternSkin/templates/css.pattern.tmpl
+++ b/PatternSkin/templates/css.pattern.tmpl
@@ -38,6 +38,7 @@
 
 %TMPL:DEF{"styles:iespecific"}%<!--[if IE]><style type="text/css" media="screen">
 pre {
+	height:1%;
 	overflow-x:auto;
 }
 </style>
